--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
-/*  your css code here. If applicable */
+body{
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+	background-color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.box{
+	border: 2px solid black;
+	background-color: lightblue;
+	height: 200px;
+	width: 200px;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+}
+.box span {
+            color: purple;
+            font-size: 16px;
+            font-family: Arial, sans-serif;
+        }
